--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,54 +1,70 @@
 <div class="container">
   <ul class="nav nav-pills dashboard-nav mb-3" id="pills-tab" role="tablist">
-  <li class="nav-item" role="presentation">
-    <a class="nav-link tabs-underlined active" id="pills-requests-tab" data-toggle="pill" href="#pills-requests" role="tab" aria-controls="pills-requests" aria-selected="true">Requests I've Made</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link tabs-underlined" id="pills-upcoming-tab" data-toggle="pill" href="#pills-upcoming" role="tab" aria-controls="pills-upcoming" aria-selected="false">My Upcoming Fosters</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link tabs-underlined" id="pills-past-tab" data-toggle="pill" href="#pills-past" role="tab" aria-controls="pills-past" aria-selected="false">My Past Fosters</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link tabs-underlined" id="pills-incoming-tab" data-toggle="pill" href="#pills-incoming" role="tab" aria-controls="pills-incoming" aria-selected="false">My Pups' Requests</a>
-  </li>
-</ul>
-<div class="tab-content" id="pills-tabContent">
-  <div class="tab-pane fade show active" id="pills-requests" role="tabpanel" aria-labelledby="pills-requests-tab">
-        <div class="row">
-      <% @pending_requests.each do |request| %>
-      <div class="col-md-4">
-        <%= render "dogs/card", request: request, review: nil %>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link tabs-underlined active" id="pills-requests-tab" data-toggle="pill" href="#pills-requests" role="tab" aria-controls="pills-requests" aria-selected="true">Requests I've Made</a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link tabs-underlined" id="pills-upcoming-tab" data-toggle="pill" href="#pills-upcoming" role="tab" aria-controls="pills-upcoming" aria-selected="false">My Upcoming Fosters</a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link tabs-underlined" id="pills-past-tab" data-toggle="pill" href="#pills-past" role="tab" aria-controls="pills-past" aria-selected="false">My Past Fosters</a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link tabs-underlined" id="pills-incoming-tab" data-toggle="pill" href="#pills-incoming" role="tab" aria-controls="pills-incoming" aria-selected="false">My Pups' Requests</a>
+    </li>
+  </ul>
+  <div class="tab-content" id="pills-tabContent">
+    <div class="tab-pane fade show active" id="pills-requests" role="tabpanel" aria-labelledby="pills-requests-tab">
+      <div class="row">
+        <% if @pending_requests.empty? %>
+        <p>You haven't requested to foster any pups yet! <%= link_to "Find a puppy to foster here!", dogs_path %></p>
+        <% else %>
+        <% @pending_requests.each do |request| %>
+        <div class="col-md-4">
+          <%= render "dogs/card", request: request, review: nil %>
+        </div>
+        <% end %>
+        <% end %>
+      </div>
     </div>
-    <% end %>
-  </div>
-  </div>
-  <div class="tab-pane fade" id="pills-upcoming" role="tabpanel" aria-labelledby="pills-upcoming-tab">
-        <div class="row">
-      <% @accepted_requests.each do |request| %>
-      <div class="col-md-4">
-        <%= render "dogs/card", request: request, review: nil %>
+    <div class="tab-pane fade" id="pills-upcoming" role="tabpanel" aria-labelledby="pills-upcoming-tab">
+      <div class="row">
+        <% if @accepted_requests.empty? %>
+        <p>You don't have have any upcoming fosters yet. <%= link_to "Find a puppy to foster here!", dogs_path %></p>
+        <% else %>
+        <% @accepted_requests.each do |request| %>
+        <div class="col-md-4">
+          <%= render "dogs/card", request: request, review: nil %>
+        </div>
+        <% end %>
+        <% end %>
+      </div>
     </div>
-    <% end %>
-  </div>
-  </div>
-  <div class="tab-pane fade" id="pills-past" role="tabpanel" aria-labelledby="pills-past-tab">
-        <div class="row">
-      <% @past_requests.each do |request| %>
-      <div class="col-md-4">
-        <%= render "dogs/card", request: request, review: nil %>
+    <div class="tab-pane fade" id="pills-past" role="tabpanel" aria-labelledby="pills-past-tab">
+      <div class="row">
+        <% if @past_requests.empty? %>
+        <p>You haven't fostered any puppys yet. <%= link_to "Find a puppy to foster here!", dogs_path %></p>
+        <% else %>
+          <% @past_requests.each do |request| %>
+          <div class="col-md-4">
+          <%= render "dogs/card", request: request, review: nil %>
+          </div>
+        <% end %>
+        <% end %>
+      </div>
     </div>
-    <% end %>
-  </div>
-  </div>
-  <div class="tab-pane fade" id="pills-incoming" role="tabpanel" aria-labelledby="pills-incoming-tab">
-        <div class="row">
-      <% @incoming_requests.each do |request| %>
-      <div class="col-md-4">
-        <%= render "dogs/card", request: request, review: Review.new(request: request) %>
+    <div class="tab-pane fade" id="pills-incoming" role="tabpanel" aria-labelledby="pills-incoming-tab">
+      <div class="row">
+        <% if @incoming_requests.empty? %>
+        <p>You don't have any requests yet. </p>
+        <% else %>
+        <% @incoming_requests.each do |request| %>
+        <div class="col-md-4">
+          <%= render "dogs/card", request: request, review: Review.new(request: request) %>
+        </div>
+        <% end %>
+        <% end %>
+      </div>
     </div>
-    <% end %>
   </div>
-  </div>
-</div>
 </div>
