--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,6 +2,11 @@
   <%= link_to root_path, class: "link-icon" do %>
   <i class="fa fa-paw" aria-hidden="true"></i><span class="title-bar">Pupper</span>
   <% end %>
+
+  <!-- Rails knows the params of the page that you are on -->
+  <% if params[:action] != "home" %>
+      <%= render "shared/search_form" %>
+  <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -19,7 +24,9 @@
           </li>
           <% else %>
             <li class="nav-item dropdown">
-          <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%= cl_image_path current_user.avatar.key %> ">
+         <% if current_user.avatar.attached? %>
+            <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%= cl_image_path current_user.avatar.key %> ">
+         <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Dashboard", dashboard_path, class: "nav-dropdown-link" %>
           <%= link_to "My Profile", user_path(current_user), class: "nav-dropdown-link" %>
