--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1512341350577-a09358311cb1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);">
   <div class="container">
     <% if user_signed_in? %>
-        <h1>Welcome! <strong><%= @user.name %></strong></h1>
+        <h1>Welcome back <strong><%= @user.name %>!</strong></h1>
         <%= link_to "Go to Dashboard", dashboard_path, class: "btn my-3"%>
     <% else %>
         <h1>Be a hero with <strong>Pupper</strong></h1>
@@ -17,7 +17,7 @@
           <h4>Be a <strong>hero</strong>. Foster a puppy waiting to be adopted.</h4>
           <p>Browse puppies looking for a nurturing, loving place to call home. When you're ready, click "Request to Foster" on the dog of your choice, and the breeder will get back to you within 3-5 business days. Pupper thanks you for being a hero.</p>
         </div>
-        <div>
+        <div id="home-search-container">
             <%= render "shared/search_form" %>
           </div>
         </div>
